--- a/02-styles.css
+++ b/02-styles.css
@@ -170,8 +170,8 @@
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
-    height: 1px;
-    width: 1px;
+    height: auto;
+    width: 100%;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
@@ -192,25 +192,29 @@
       ============================= */
   
   ul.row {
-    margin: -1rem;
+    margin: 0;
     padding: 0;
     list-style: none;
+    max-width: 767px;
+    flex-direction: column;
   }
   
   .row {
     display: flex;
+    max-width: 767px
+    flex-direction: column;
   }
   
   [class*='col-'] {
-    margin: 1rem;
+    margin: 0 0 3rem 0;
   }
   
   .col-1-3 {
-    width: calc((100% / 3) - 2rem);
+    width: 100%;
   }
   
   .col-1-2 {
-    width: calc((100% / 2) - 2rem);
+    width: 100%;
   }
   
   /* Navbar
@@ -221,7 +225,7 @@
     padding: 0;
     list-style: none;
     text-align: center;
-    display: flex;
+    display: none;
   }
   
   .nav .nav-item {
@@ -315,7 +319,7 @@
       ============================= */
   
   .section {
-    padding: var(--section-padding);
+    padding: 5rem 1.5rem(--section-padding);
   }
   
   .section-header {
@@ -340,7 +344,7 @@
   }
   
   .section-body {
-    padding: var(--section-body-padding);
+    padding: 22rem 0 0(--section-body-padding);
   }
   
   .section-footer {
@@ -368,7 +372,7 @@
   
   .hero-homepage {
     background-image: url(images/banner-home.jpg);
-    background-position: 75% 0;
+    background-position: 65% 8rem;
     background-repeat: no-repeat;
     background-size: 90rem auto;
   }
@@ -391,13 +395,13 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    min-height: 50vh;
+    min-height: 35vh;
   }
   /* Section Latest news
       ============================= */
   
   .section-latest-news .row {
-    flex-direction: row-reverse;
+    flex-direction: column;
   }
   
   /* Section SERVICES
@@ -858,3 +862,4 @@
     cursor: text;
     margin: 0 1rem;
   }
+    
