--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -159,7 +159,7 @@ template {
 }
 
 /* Variables
-                 ============================= */
+                           ============================= */
 
 :root {
   --color-primary: #d73953;
@@ -238,7 +238,7 @@ template {
 }
 
 /* Base
-                    ============================= */
+                              ============================= */
 
 *,
 *:before,
@@ -304,7 +304,7 @@ a:active {
 }
 
 /* Helpers
-                    ============================= */
+                              ============================= */
 
 .visually-hidden:not(:focus):not(:active) {
   position: absolute !important;
@@ -318,7 +318,7 @@ a:active {
 /*** 2. LAYOUT ***/
 
 /* Layout
-                    ============================= */
+                              ============================= */
 
 .container {
   width: 960px;
@@ -327,7 +327,7 @@ a:active {
 }
 
 /* Grid
-                    ============================= */
+                              ============================= */
 
 ul.row {
   margin: -1rem;
@@ -352,7 +352,7 @@ ul.row {
 }
 
 /* Navbar
-                    ============================= */
+                              ============================= */
 
 .nav {
   margin: 0;
@@ -401,7 +401,7 @@ ul.row {
 }
 
 /* Header
-                    ============================= */
+                              ============================= */
 
 .header {
   padding: var(--header-padding);
@@ -417,7 +417,7 @@ ul.row {
 }
 
 /* Footer
-                    ============================= */
+                              ============================= */
 
 .footer {
   --nav-item-font-weight: normal;
@@ -450,7 +450,7 @@ ul.row {
 /*** 3. SECTION ***/
 
 /* Section (all styles)
-                    ============================= */
+                              ============================= */
 
 .section {
   padding: var(--section-padding);
@@ -487,7 +487,7 @@ ul.row {
 }
 
 /* Section theming
-                    ============================= */
+                              ============================= */
 
 [data-section-theme="dark"] {
   --button-color: var(--color-white);
@@ -497,9 +497,23 @@ ul.row {
 }
 
 /* Section HERO
-                    ============================= */
+                              ============================= */
 
 .section-hero {
+  position: relative;
+  margin-top: -8.5rem;
+}
+
+.section-hero .section-body {
+  padding: 10rem 4rem;
+}
+
+.section-hero .section-category {
+  color: var(--color-white);
+  text-transform: uppercase;
+}
+
+.hero-homepage {
   background-position: 75% 0;
   background-repeat: no-repeat;
   background-size: 90rem auto;
@@ -511,7 +525,11 @@ ul.row {
 }
 
 .section-hero .section-inner {
-  padding: 10rem 40rem 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  min-height: 50vh;
 }
 
 /* Section Latest news ============================= */
@@ -526,17 +544,22 @@ ul.row {
   flex-wrap: wrap;
 }
 
+/* Section ABOUT US ============================= */
+.section-about-us [class^="col-"] {
+  align-self: center;
+}
+
 /*** 4. CARD ***/
 
 /* Card (all styles)
-                    ============================= */
+                              ============================= */
 
 .card-category {
   color: var(--color-primary);
 }
 
 /* Card WORK
-                    ============================= */
+                              ============================= */
 
 .card-work .card-outer {
   position: relative;
@@ -601,7 +624,7 @@ ul.row {
 }
 
 /* Card SERVICES
-                    ============================= */
+                              ============================= */
 
 .card-services .card-title {
   margin: 0;
@@ -622,7 +645,7 @@ ul.row {
 }
 
 /* Card TESTIMONIAL
-                    ============================= */
+                              ============================= */
 
 .card-testimonial {
   text-align: center;
@@ -652,4 +675,98 @@ ul.row {
   color: #efeded;
   font-size: 10rem;
   z-index: -1;
+}
+
+/*** ARTICLE PAGE ***/
+/* Section HERO (article)
+        ============================= */
+.hero-article {
+  background-size: 150rem 100rem;
+  background-position: 50% 0;
+}
+
+.hero-article::before {
+  content: "";
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+}
+
+.hero-article .section-inner {
+  text-align: center;
+  align-items: center;
+  min-height: 40vh;
+}
+
+.hero-article .section-body {
+  position: relative;
+  padding: 7rem 0 0;
+  z-index: 2;
+}
+
+.main-article {
+  padding: 5rem 0;
+}
+
+/* Post
+      ============================= */
+.post {
+  display: flex;
+}
+
+.post-content {
+  width: 100%;
+}
+
+.post-aside {
+  order: -1;
+  min-width: 20%;
+}
+
+/* Post Meta
+    ============================= */
+
+.post-meta-list {
+  flex-direction: column;
+}
+
+.post-meta-list strong {
+  color: var(--color-primary);
+  font-size: var(--font-size-small);
+  text-transform: uppercase;
+  display: block;
+}
+
+.post-meta-list [class^="post-meta-"] {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 0.2rem solid var(--color-light-grey);
+}
+
+.post-meta-list [class^="post-meta"]:last-child {
+  border: none;
+  margin-bottom: 3rem;
+}
+
+/* Tag list
+    ============================= */
+.tag-list {
+  padding: 0;
+  list-style: none;
+}
+
+.tag-list li {
+  display: inline;
+}
+
+.tag-list li::after {
+  content: ", ";
+}
+
+.tag-list li:last-child::after {
+  content: "";
 }
